[package]
name = "inp_func"
version = "0.1.1"
authors = ["Saim Irfan <samfan95@gmail.com>"]
edition = "2018"
description = "This is my first crate so go easy on me use input \n input::i8() = To input i8 value in a var"
license = "MIT"
repository = "https://github.com/Sammy275/inp_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
